// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`oxlint2 CLI > should lint a directory with errors 1`] = `
"
  x ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

Found 0 warnings and 1 error.
Finished in Xms on 1 file using X threads."
`;

exports[`oxlint2 CLI > should lint a directory without errors 1`] = `
"Found 0 warnings and 0 errors.
Finished in Xms on 1 file using X threads."
`;

exports[`oxlint2 CLI > should load a custom plugin 1`] = `
"
  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

Found 1 warning and 1 error.
Finished in Xms on 1 file using X threads."
`;

exports[`oxlint2 CLI > should load a custom plugin when configured in overrides 1`] = `
"
  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

Found 1 warning and 1 error.
Finished in Xms on 1 file using X threads."
`;

exports[`oxlint2 CLI > should load a custom plugin with multiple files 1`] = `
"
  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/01.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/01.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/02.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/02.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/03.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/03.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/04.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/04.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/05.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/05.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/06.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/06.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/07.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/07.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/08.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/08.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/09.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/09.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/10.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/10.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/11.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/11.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/12.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/12.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/13.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/13.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/14.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/14.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/15.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/15.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/16.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/16.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/17.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/17.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/18.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/18.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/19.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/19.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/20.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/20.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

Found 20 warnings and 20 errors.
Finished in Xms on 20 files using X threads."
`;

exports[`oxlint2 CLI > should report an error if a custom plugin cannot be loaded 1`] = `
"Failed to parse configuration file.

  x Failed to load external plugin: ./test_plugin
  |   Cannot find module './test_plugin'
"
`;

exports[`oxlint2 CLI > should report an error if a rule is not found within a custom plugin 1`] = `
"Failed to parse configuration file.

  x Rule 'unknown-rule' not found in plugin 'basic-custom-plugin'
"
`;

exports[`oxlint2 CLI > should report the correct severity when using a custom plugin 1`] = `
"
  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  ! basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

Found 2 warnings and 0 errors.
Finished in Xms on 1 file using X threads."
`;
